--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@tabler/icons-react": "^3.33.0",
     "@types/node": "^20.2.3",
     "apexcharts": "4.7.0",
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "lodash": "^4.17.21",
@@ -28,7 +30,8 @@
     "react-dom": "19.1.0",
     "react-mui-sidebar": "^1.6.3",
     "react-syntax-highlighter": "^15.6.1",
-    "typescript": "5.7.3"
+    "typescript": "5.7.3",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@types/lodash": "4.14.196",
