--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^17.2.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "^15.1.7",
     "react": "19.1.0",
@@ -34,6 +35,7 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "4.14.196",
     "@types/react-syntax-highlighter": "^15.5.13"
   }
